Line heights fixed + added email address.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			font-family: 'Source Code Pro';
 			font-weight: bold;
 			font-size: 16px;
-			
+			line-height: 2em;
 			padding: 1em;
 		}
 		
@@ -32,10 +32,11 @@
 			text-decoration: none;
 			padding: 0.2em 0.6em;
 			border-radius: 2px;
+			background: #0c04ff;
 		}
 		
 		nav {
-			padding: 1.2em 0;
+			padding: 2em 0;
 		}
 		
 		nav ol li {
@@ -52,7 +53,7 @@
 			background: -webkit-linear-gradient(left, #1067d9 0%, #1067d9 50%, #fd1685 50%, #fd1685 100%);
 		}
 		a#email {
-			background: #0c04ff;
+			
 		}
 		a#air {
 			background: -webkit-linear-gradient(#FF512F 0%, #FF2D55 50%, #DD2476 100%);
@@ -66,7 +67,7 @@
 
 <body>
 		
-		<h1>Hi, my name is Jakub Swiadek</h1>
+		<h1>Hi, my name is Jakub Swiadek.</h1>
 		<h2>I'm an interface & interaction designer.</h2>
 		
 		<nav>
@@ -74,13 +75,14 @@
 			<ol>
 				<li><a id="dribbble" href="https://dribbble.com/painstaking">Dribbble</a></li>
 				<li><a id="twitter" href="https://twitter.com/jakubswiadek">Twitter</a></li>
-				<li><a id="flickr" href="https://www.flickr.com/photos/jimmjohny">Flickr</a></li>
-				<li><a id="email" href="">Email</a></li>
+				<li><a id="flickr" href="https://flickr.com/photos/jimmjohny">Flickr</a></li>
+				<li><a id="email" href="mailto:jakub@swiadek.org">Email</a></li>
+
 			</ol>
 		
 		</nav>
 		
-		<p>Currently, I'm working at <a id="air" href="getair.co">Air</a></p>
+		<p>Currently, I'm working at <a id="air" href="https://getair.co">Air</a>.</p>
 
 </body>
 </html>
