Tweaked Air link color

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			
 		}
 		a#air {
-			background: -webkit-linear-gradient(#FF512F 0%, #FF2D55 50%, #DD2476 100%);
+			background: #FF2D55;
 		}
 		
 	</style>
