Changed Air to Meerkat.

--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 		a#email {
 			
 		}
-		a#air {
-			background: #FF2D55;
+		a#meerkat {
+			color: black;
+			background: #FFE200;
 		}
 		
 	</style>
@@ -82,7 +83,7 @@
 		
 		</nav>
 		
-		<p>Currently, I'm working at <a id="air" href="https://getair.co">Air</a>.</p>
+		<p>Currently, I'm working at <a id="meerkat" href="http://meerkatapp.co">Meerkat</a>.</p>
 
 </body>
 </html>
