--- a/index.html
+++ b/index.html
@@ -4,86 +4,38 @@
 
 	<meta charset="utf-8">
 	
-	<title>Jakub Świadek</title>
-	<meta name="author" content="Jakub Świadek" />
-	<meta name="description" content="UI & Interaction Designer" />
-	<meta name="Copyright" content="Jakub Świadek" />
-
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link rel="shortcut icon" href="favicon.ico" />
-		
-	<style>
-		
-		/* HTML5 Reset */
-		html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {margin: 0;padding: 0;border: 0;font-size: 100%;font-weight: normal;vertical-align: baseline;background: transparent;}article, aside, figure, footer, header, nav, section, details, summary {display: block;}html {box-sizing: border-box;}*, *:before, *:after {box-sizing: inherit;}img,object,embed {max-width: 100%;}html {overflow-y: scroll;}ul {list-style: none;}blockquote, q {quotes: none;}blockquote:before, blockquote:after, q:before, q:after {content: ''; content: none;}a {margin: 0; padding: 0; font-size: 100%; vertical-align: baseline; background: transparent;}del {text-decoration: line-through;}abbr[title], dfn[title] {border-bottom: 1px dotted #000; cursor: help;}table {border-collapse: collapse; border-spacing: 0;}th {font-weight: bold; vertical-align: bottom;}td {font-weight: normal; vertical-align: top;}hr {display: block; height: 1px; border: 0; border-top: 1px solid #ccc; margin: 1em 0; padding: 0;}input, select {vertical-align: middle;}pre {white-space: pre;white-space: pre-wrap;white-space: pre-line;word-wrap: break-word;}input[type="radio"] {vertical-align: text-bottom;}input[type="checkbox"] {vertical-align: bottom;}.ie7 input[type="checkbox"] {vertical-align: baseline;}.ie6 input {vertical-align: text-bottom;}select, input, textarea {font: 99% sans-serif;}table {font-size: inherit; font: 100%;}small {font-size: 85%;}strong {font-weight: bold;}td, td img {vertical-align: top;} sub, sup {font-size: 75%; line-height: 0; position: relative;}sup {top: -0.5em;}sub {bottom: -0.25em;}pre, code, kbd, samp {font-family: monospace, sans-serif;}.clickable,label, input[type=button], input[type=submit], input[type=file], button {cursor: pointer;}button, input, select, textarea {margin: 0;}button,input[type=button] {width: auto; overflow: visible;}.ie7 img {-ms-interpolation-mode: bicubic;}.clearfix:before, .clearfix:after { content: "\0020"; display: block; height: 0; overflow: hidden; }  .clearfix:after { clear: both; }  .clearfix { zoom: 1; }
-		
-		body {
-			color: #575757;
-			font-family: 'Source Code Pro';
-			font-weight: bold;
-			font-size: 16px;
-			line-height: 2em;
-			padding: 1em;
-		}
-		
-		a {
-			color: white;
-			text-decoration: none;
-			padding: 0.2em 0.6em;
-			border-radius: 2px;
-			background: #0c04ff;
-		}
-		
-		nav {
-			padding: 2em 0;
-		}
-		
-		nav ol li {
-			display: inline-block;
-		}
-		
-		a#dribbble {
-			background: #ea4c89;
-		}
-		a#twitter {
-			background: #55acee;
-		}
-		a#flickr {
-			background: -webkit-linear-gradient(left, #1067d9 0%, #1067d9 50%, #fd1685 50%, #fd1685 100%);
-		}
-		a#email {
-			
-		}
-		a#meerkat {
-			color: black;
-			background: #FFE200;
-		}
-		
-	</style>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
-	<link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+	<title></title>
+	<meta name="author" content="" />
+	<meta name="description" content="" />
+	<meta name="Copyright" content="" />
+	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="stylesheet" href="assets/css/reset.css" />
+	<link rel="stylesheet" href="assets/css/style.css" />
 
 </head>
 
 <body>
+	
+	<div id="wrapper">
+		<h1>I think in shapes and strokes.</h1>
+		<svg id="circle" xmlns="http://www.w3.org/2000/svg" viewBox="-267 359 76 76"><circle fill="#E5E5FF" cx="-229" cy="397" r="38"></circle></svg>
+		<svg id="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="-257 356 97 81"><polygon fill="none" stroke="#FFE5E5" stroke-width="10" points="-208.5,366.2 -169.8,430.8 -247.2,430.8 "></polygon></svg>
+	</div>
 		
-		<h1>Hi, my name is Jakub Swiadek.</h1>
-		<h2>I'm an interface & interaction designer.</h2>
+	<aside>
+		<p>I'm a lead designer at <a href="http://meerkatapp.co">Meerkat</a>.</p>
 		
-		<nav>
-		
-			<ol>
-				<li><a id="dribbble" href="https://dribbble.com/jakubswiadek">Dribbble</a></li>
-				<li><a id="twitter" href="https://twitter.com/jakubswiadek">Twitter</a></li>
-				<li><a id="flickr" href="https://flickr.com/photos/jimmjohny">Flickr</a></li>
-				<li><a id="email" href="mailto:jakub@swiadek.org">Email</a></li>
-
-			</ol>
-		
-		</nav>
-		
-		<p>Currently, I'm working at <a id="meerkat" href="http://meerkatapp.co">Meerkat</a>.</p>
-
+		<ul>
+			<li><a href="https://dribbble.com/jakubswiadek" id="dribbble">Dribbble</a></li>
+			<li><a href="https://twitter.com/jakubswiadek" id="twitter">Twitter</a></li>
+			<li><a href="https://www.flickr.com/photos/jimmjohny" id="flickr">Flick<span>r</span></a></li>
+			<li><a href="mailto:jakub@swiadek.org" id="mail">Mail</a></li>
+		</ul>
+	</aside>
+  
 </body>
 </html>
