--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
-	<title></title>
-	<meta name="author" content="" />
-	<meta name="description" content="" />
-	<meta name="Copyright" content="" />
+	<title>Jakub Świadek</title>
+	<meta name="author" content="Jakub Świadek" />
+	<meta name="description" content="I think in shapes and strokes. I'm an interaction designer." />
+	<meta name="Copyright" content="Jakub Świadek" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
