--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 	
 	<div id="wrapper">
-		<h1>I think in shapes and strokes. Blablabla.</h1>
+		<h1>I think in shapes and strokes.</h1>
 		<svg id="circle" xmlns="http://www.w3.org/2000/svg" viewBox="-267 359 76 76"><circle fill="#E5E5FF" cx="-229" cy="397" r="38"></circle></svg>
 		<svg id="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="-257 356 97 81"><polygon fill="none" stroke="#FFE5E5" stroke-width="10" points="-208.5,366.2 -169.8,430.8 -247.2,430.8 "></polygon></svg>
 	</div>
