Updated to a new style and content.

--- a/index.html
+++ b/index.html
@@ -8,34 +8,38 @@
 	
 	<title>Jakub Świadek</title>
 	<meta name="author" content="Jakub Świadek" />
-	<meta name="description" content="I think in shapes and strokes. I'm an interaction designer." />
+	<meta name="description" content="Bicycle rider. Photo taker. Desinger at Houseparty." />
 	<meta name="Copyright" content="Jakub Świadek" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<link rel="stylesheet" href="assets/css/reset.css" />
-	<link rel="stylesheet" href="assets/css/style.css" />
+	<style>
+		body {
+			font-family: -apple-system, sans-serif;
+			font-weight: 500;
+			color: #666666;
+			margin: 40px;
+			line-height: 1.5em;
+		}
+		a {
+			color: #0045ff;
+			text-decoration: none;
+			padding-bottom: 2px;
+			border-bottom: 2px solid #0045ff;
+		}
+	</style>
 
 </head>
 
 <body>
 	
-	<div id="wrapper">
-		<h1>I think in shapes and strokes.</h1>
-		<svg id="circle" xmlns="http://www.w3.org/2000/svg" viewBox="-267 359 76 76"><circle fill="#E5E5FF" cx="-229" cy="397" r="38"></circle></svg>
-		<svg id="triangle" xmlns="http://www.w3.org/2000/svg" viewBox="-257 356 97 81"><polygon fill="none" stroke="#FFE5E5" stroke-width="10" points="-208.5,366.2 -169.8,430.8 -247.2,430.8 "></polygon></svg>
-	</div>
-		
-	<aside>
-		<p>I'm a lead designer at <a href="http://meerkatapp.co">Meerkat</a>.</p>
-		
-		<ul>
-			<li><a href="https://dribbble.com/jakubswiadek" id="dribbble">Dribbble</a></li>
-			<li><a href="https://twitter.com/jakubswiadek" id="twitter">Twitter</a></li>
-			<li><a href="https://www.flickr.com/photos/jimmjohny" id="flickr">Flick<span>r</span></a></li>
-			<li><a href="mailto:jakub@swiadek.org" id="mail">Mail</a></li>
-		</ul>
-	</aside>
+<p>Hi. My name is Jakub Świadek.</p>
+
+<p>I <a href="https://www.strava.com/athletes/7020433">ride bikes</a> and sometimes <a href="https://www.instagram.com/jakubswiadek/">take photos</a>.</p>
+
+<p>I work as a designer at <a href="https://houseparty.com">Houseparty</a>.</p>
+
+<a href="mailto:jakub@swiadek.org">jakub@swiadek.org</a>
   
 </body>
 </html>
