We’re going #666666

--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
 	
 	<style>
 		body {
+			margin: 40px;
+			
 			font-family: -apple-system, sans-serif;
 			font-weight: 500;
-			color: #666666;
-			margin: 40px;
 			line-height: 1.5em;
+			
+			background-color: black;
+			color: #666666;
 		}
 		a {
-			color: #0045ff;
+			color: #666666;
 			text-decoration: none;
 			padding-bottom: 2px;
-			border-bottom: 2px solid #0045ff;
+			border-bottom: 2px solid #666666;
 		}
 	</style>
 
