Updated to Epic + some small copy edits and selection styling.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 	<style>
+		::selection {
+			background-color: white;
+			color: black;
+		}
+		
 		body {
 			margin: 40px;
 			
@@ -36,11 +41,11 @@
 
 <body>
 	
-<p>Hi. My name is Jakub Świadek.</p>
+<p>Hello!</p>
 
-<p>I <a href="https://www.strava.com/athletes/7020433">ride bikes</a> and sometimes <a href="https://www.instagram.com/jakubswiadek/">take photos</a>.</p>
+<p>I often <a href="https://www.strava.com/athletes/7020433">ride bikes</a> and sometimes <a href="https://www.instagram.com/jakubswiadek/">take photos</a>.</p>
 
-<p>I work as a designer at <a href="https://houseparty.com">Houseparty</a>.</p>
+<p>I work as a product designer at <a href="https://www.epicgames.com/">Epic Games</a>.</p>
 
 <a href="mailto:jakub@swiadek.org">jakub@swiadek.org</a>
   
