--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		}
 		
 		body {
-			margin: 40px;
+			margin: 10vw;
 			
 			font-family: -apple-system, sans-serif;
 			font-weight: 500;
@@ -33,7 +33,7 @@
 			color: #666;
 			text-decoration: none;
 			padding-bottom: 2px;
-			border-bottom: 2px solid #666;
+			border-bottom: 2px solid #333;
 		}
 	</style>
 
@@ -41,7 +41,7 @@
 
 <body>
 	
-<p>Hello!</p>
+<p>Hi!</p>
 
 <p>I often <a href="https://www.strava.com/athletes/7020433">ride bikes</a> and sometimes <a href="https://www.instagram.com/jakubswiadek/">take photos</a>.</p>
 
