--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	
 	<title>Jakub Świadek</title>
 	<meta name="author" content="Jakub Świadek" />
-	<meta name="description" content="Bicycle rider. Photo taker. Desinger at Houseparty." />
+	<meta name="description" content="I often ride bikes and sometimes take photos. I work as a product designer at Epic Games." />
 	<meta name="Copyright" content="Jakub Świadek" />
 	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
 		}
 		
 		body {
-			margin: 10vw;
+			margin: 5vw;
 			
 			font-family: -apple-system, sans-serif;
 			font-weight: 500;
