Added an email link

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<p>Some of my favorite parts of design work include using animations and transitions to create behavior patterns that locate and guide users through experiences. I also love the meticulous work of designing icons, and creating robust, thoughtful and portable design systems.</p>
 					<p>For the most part, I'm a generalist kind of designer. I think the breadth of experience and understanding of how different pieces of work come together is valuable in creating cohesive experiences.</p>
 					<p>To that end, I can draw illustrations and iconography in Illustrator, design interfaces and systems in Figma, craft animations and transitions in After Effects or Flinto, and code front end layout and animations in CSS, Javascript, or Swift.</p>
+					<a href="mailto:jakub@swiadek.org">Let's talk!</a>
 				</article>
 					
 		</section>
